project(conup)

file(GLOB_RECURSE CONUP_LIB_SOURCES RELATIVE ${PROJECT_SOURCE_DIR} "*.cpp")
file(GLOB_RECURSE CONUP_LIB_HEADERS_PUB_ABS ABSOLUTE ${PROJECT_SOURCE_DIR} "*.h")
file(GLOB_RECURSE CONUP_LIB_HEADERS_PUB RELATIVE ${PROJECT_SOURCE_DIR} "*.h")
file(GLOB_RECURSE CONUP_LIB_HEADERS_PVT RELATIVE ${PROJECT_SOURCE_DIR} "*.hpp")

add_library(CU_objlib OBJECT ${CONUP_LIB_SOURCES})

# shared libraries need PIC
set_property(TARGET CU_objlib PROPERTY POSITION_INDEPENDENT_CODE 1)

set_target_properties(CU_objlib PROPERTIES LIBRARY_OUTPUT_DIRECTORY "${CMAKE_SOURCE_DIR}/bin/lib")

target_precompile_headers(CU_objlib PRIVATE ${PROJECT_SOURCE_DIR}/pch.h)

SET_TARGET_PROPERTIES( 
	CU_objlib  
PROPERTIES 
  FRAMEWORK ON
  SOVERSION 0
  VERSION 0.1.0
  PUBLIC_HEADER "${CONUP_LIB_HEADERS_PUB}"
  PRIVATE_HEADER "${CONUP_LIB_HEADERS_PVT}"
  ARCHIVE_OUTPUT_DIRECTORY "lib"
  LIBRARY_OUTPUT_DIRECTORY "lib"
  OUTPUT_NAME ${PROJECT_NAME}
)

list(APPEND PUB_HEADERS CONUP_LIB_HEADERS_PUB_ABS)

add_library(conup_lib STATIC $<TARGET_OBJECTS:CU_objlib>)


list(APPEND static_link_LIB conup_lib)
